# indesign-cli

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.en.md  README.md  index.js  package-lock.json  package.json  pyproject.toml  setup.py
agent-harness/: INDESIGN.md  setup.py
docs/: LLM_PROMPT.md  MCP_INSTRUCTIONS.md  README.md  SYNC.md  agent-template-flow.md  template-blueprint.md
docs/AI协作/: README.md
docs/AI协作/反馈循环/: README.md  (+1 more)
docs/bugfix/: README.md
docs/legacy/: CHANGELOG.md  code-review.md  gpt5pro设计的工具.md  tools.md
docs/review/: 2026-07-02-indesign-cli-agent-ux-hardening-review.md  2026-07-03-indesign-cli-agent-experience-full-review.md
docs/superpowers/: README.md
docs/技术决策/: 2026-07-06-agent反馈闭环流程.md  2026-07-07_终态架构.md  README.md
docs/系统地图/: README.md
indesign-mcp-server/: .gitignore  AGENTS.md  package-lock.json  setup.py
indesign-mcp-server/agent-harness/: INDESIGN.md  setup.py
indesign-mcp-server/tests/: index.js  test-image-fix.js  test-master-runner-cli.js
scripts/: build-presentation.mjs  build_agent_bootstrapper.py  check_architecture.mjs  check_duplicates.mjs  export-template-blueprint.mjs  load_server.mjs  publish_agent_runtime.py  quick_check.mjs  validate_schemas.js
scripts/feedback/: aggregate.py
scripts/migration/: contract_baseline.py  record_golden.mjs
skills/indesign-cli/: SKILL.md
src/: index.js
src/advanced/: index.js
src/core/: InDesignMCPServer.js  artifact.js  indesign-tool-registry.json  mcpServer.js  runtime.js  scriptExecutor.js  sessionManager.js  toolRouter.js
src/handlers/: advancedTemplateHandlers.js  bookHandlers.js  documentHandlers.js  exportHandlers.js  graphicsHandlers.js  groupHandlers.js  helpHandlers.js  index.js  presentationHandlers.js  textHandlers.js
src/tools/: _contract.js  index.js
src/types/: index.js  toolDefinitionsAdvancedTemplates.js  toolDefinitionsBook.js  toolDefinitionsContent.js  toolDefinitionsDocument.js  toolDefinitionsExport.js  toolDefinitionsLayer.js  toolDefinitionsMasterSpread.js  toolDefinitionsPage.js  toolDefinitionsPageItemGroup.js  toolDefinitionsPresentation.js  toolDefinitionsSpread.js  toolDefinitionsUtility.js
src/utils/: stringUtils.js
tests/: README.md  index.js  test-absolute-path.js  test-advanced-features.js  test-basic-workflow.js  test-bounds-checking.js  test-content-management.js  test-data.csv  test-document-and-page.js  test-document-preferences.js  test-enhanced-functionality.js  test-error-handling.js  test-grid-layout.js  test-handler-contracts.js  test-image-assets.js  test-image-fix.js  test-indesign-basic.js  test-master-runner-cli.js  test-mcp-protocol.js  test-pageitem-group.js  test-real-image.js  test-response-semantics.js  test-simple-document.js  test-standard-document.js  test-swatches-and-backgrounds.js  unified-test-runner.js
tests/architecture/: registry.test.mjs  required-runner.test.mjs
tests/migration/: record-golden-d-evidence.test.mjs  record-golden-line-reader.test.mjs
tests/real-e2e/: README.md  deck-brief.json  run-agent-ux-hardening.mjs  run-architecture-presentation.mjs
(+331 files in other folders)
