[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indesign-cli"
version = "0.5.0"
description = "Agent-native CLI for Adobe InDesign automation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Sa" }]
maintainers = [{ name = "indesign-cli maintainers" }]
keywords = ["indesign", "cli", "agent", "automation", "mcp", "adobe"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: JavaScript",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Build Tools",
]

[project.scripts]
indesign-cli = "cli_anything.indesign.indesign_cli:main"
cli-anything-indesign = "cli_anything.indesign.indesign_cli:main"
indesign-cli-agent = "cli_anything.indesign.agent_bootstrapper:main"

[project.urls]
Repository = "https://github.com/zhanglongxiao111/indesign-cli"
Issues = "https://github.com/zhanglongxiao111/indesign-cli/issues"
Homepage = "https://github.com/zhanglongxiao111/indesign-cli#readme"

[tool.setuptools]
package-dir = { "" = "agent-harness" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["agent-harness"]
include = ["cli_anything.*"]
exclude = ["cli_anything.indesign.tests*"]

[tool.setuptools.package-data]
"cli_anything.indesign" = ["skills/*.md", "node/*.mjs", "server/src/core/indesign-tool-registry.json"]
